Fix reset.css
Fonts got broken on Vercel for no reason. This fix fixes them.

--- a/src/app/reset.sass
+++ b/src/app/reset.sass
@@ -6,8 +6,7 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
     margin: 0
     padding: 0
     border: 0
-    font-size: 100%
-    font: inherit
+    font-weight: normal
     vertical-align: baseline
     text-rendering: optimizeLegibility
     -webkit-font-smoothing: antialiased
